settings: Shorcut section horizontal alignment fix.

--- a/app/renderer/css/preference.css
+++ b/app/renderer/css/preference.css
@@ -287,6 +287,7 @@ img.server-info-icon {
 
 .settings-pane {
     flex-grow: 1;
+	min-width: 550px;
 }
 
 .action:hover {
